# aiocr

./: .gitignore  Cargo.toml  README.md
crates/aiocr-core/: Cargo.toml  build.rs
crates/aiocr-core/benches/: ocr_hotspots.rs
crates/aiocr-core/examples/: ocr_probe.rs
crates/aiocr-core/src/: config.rs  decode.rs  error.rs  lib.rs  pipeline.rs  postprocess.rs  preprocess.rs  types.rs
crates/aiocr-core/src/models/: classifier.rs  detector.rs  mod.rs  onnx_backend.rs  recognizer.rs
crates/aiocr-gui/: Cargo.toml
crates/aiocr-gui/assets/: FONT-LICENSE.txt
crates/aiocr-gui/src/: app.rs  main.rs  native.rs  state.rs  theme.rs  worker.rs
crates/aiocr-gui/src/panels/: control_panel.rs  image_panel.rs  mod.rs  model_hub_panel.rs  result_panel.rs  toolbar.rs  training_panel.rs
crates/aiocr-gui/src/widgets/: bbox_overlay.rs  mod.rs  progress.rs
crates/aiocr-train/: Cargo.toml  build.rs
crates/aiocr-train/src/: ai_model.rs  config.rs  ctc_loss.rs  error.rs  lib.rs  template.rs  training.rs
crates/aiocr-train/src/data/: augment.rs  batcher.rs  dataset.rs  mod.rs
crates/aiocr-train/src/model/: backbone.rs  crnn.rs  head.rs  mod.rs
