[package]
name = "aiocr-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aiocr-core = { path = "../aiocr-core" }
aiocr-train = { path = "../aiocr-train" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
image.workspace = true
rfd.workspace = true
arboard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
ureq.workspace = true
