[package]
name = "aiocr-train"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
aiocr-core = { path = "../aiocr-core" }
burn = { workspace = true, features = ["ndarray", "wgpu", "train"] }
burn-store.workspace = true
image.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
burn-onnx = "0.21.0-pre.3"
tract-onnx.workspace = true
prost = "0.11"
